--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #282c34;
-  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  font-family: "Roboto", sans-serif;
+}
+
+.videoListing-page {
+  display: flex;
+  margin-top: 1rem;
+}
+
+.video-listing-side-nav {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+  background-color: yellow;
+}
+
+.video-listing-side-nav div {
+  padding-left: 1rem;
+  margin: 1rem 0;
+  width: 15rem;
+}
+
+.video-listing {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.video-card {
+  margin: 0 1rem;
+  border: none;
+}
+
+@media (max-width: 900px) {
+  .video-listing-side-nav {
+    display: none;
+  }
 }
