--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,121 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
-body {
-  margin: 0;
+:root {
+  --primary-color: #030d51;
+  --custom-red: #ef4444;
+  --custom-yellow: #f59e0b;
+  --custom-green: #10b981;
+  --custom-blue: #3b82f6;
+  --avatar-border: #2c303a;
+  --custom-purple: #7c3aed;
+  --secondary-color: #80868b;
+  --border-color: #dadce0;
+  --primary-alt: #003984;
 }
 
-.App {
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  padding-top: 4rem;
+  margin: 0;
   font-family: "Roboto", sans-serif;
 }
 
+button {
+  font-family: "Roboto", sans-serif;
+}
+
+input {
+  accent-color: var(--primary-color);
+}
+
+/* header related */
+.header {
+  box-sizing: border-box;
+  padding: 0.2rem 1rem;
+  display: flex;
+  background-color: white;
+  border-bottom: 1px solid var(--border-color);
+  box-shadow: 0 0 10px rgb(0 0 0 / 0.2);
+  color: var(--primary-color);
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.brand-title {
+  cursor: pointer;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+}
+
+/* header notification button */
+.btn-show {
+  position: relative;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  padding-top: 1rem;
+  color: var(--primary-color);
+}
+
+.btn-show .icon-badge {
+  width: 1.1rem;
+  height: 1.1rem;
+  top: 0.4rem;
+  left: 1.3rem;
+}
+
+.header-left-side {
+  display: flex;
+}
+
+.header-left-side .menu {
+  padding: 0 1rem 0 0;
+}
+
+.header-right-side {
+  display: flex;
+}
+
+.header-right-side .custom-avatar-small {
+  margin-left: 1rem;
+  border: none;
+  width: auto;
+  height: 2rem;
+  padding: 0.5rem 0;
+}
+
+/* VideoListing related */
 .videoListing-page {
   display: flex;
   margin-top: 1rem;
 }
 
+/* side navbar */
 .video-listing-side-nav {
+  background-color: white;
   display: flex;
   flex-direction: column;
   margin-left: 1rem;
 }
 
 .video-listing-side-nav div {
-  padding-left: 1rem;
-  margin: 1rem 0;
+  padding: 1rem 0 1rem 1rem;
   width: 15rem;
 }
 
+.video-listing-side-nav div:hover {
+  background-color: var(--border-color);
+  cursor: pointer;
+}
+
+/* videos */
 .video-listing {
   display: flex;
   flex-wrap: wrap;
@@ -38,13 +129,27 @@ body {
   border: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 700px) {
+  /* header */
+  .header {
+    padding: 0.6rem 1rem;
+  }
+
+  .notification {
+    display: none;
+  }
+
+  /* videoListing related */
   .video-card {
-    margin: 0;
+    margin: 0.5rem 0;
   }
 
   .video-listing-side-nav {
     display: none;
+    margin: 0;
+    position: fixed;
+    left: 0;
+    z-index: 1;
   }
 
   .video-listing {
@@ -52,6 +157,7 @@ body {
   }
 }
 
+/* for old gen 1370px screens */
 @media (max-width: 1370px) {
   .video-listing-side-nav div {
     width: 12rem;
@@ -59,5 +165,17 @@ body {
 
   .video-listing {
     width: 100%;
+  }
+}
+
+/* for tablets */
+@media (max-width: 1030px) {
+  .video-card-other-option button {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .video-card-more-option .three-dots {
+    color: black;
   }
 }
