--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,9 +45,10 @@ button {
 }
 
 .brand-title {
-  cursor: pointer;
   font-weight: bold;
   font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 /* header notification button */
@@ -61,10 +62,11 @@ button {
 }
 
 .btn-show .icon-badge {
-  width: 1.1rem;
-  height: 1.1rem;
-  top: 0.4rem;
-  left: 1.3rem;
+  border: none;
+  width: 1rem;
+  height: 1rem;
+  top: 1rem;
+  left: 1.2rem;
 }
 
 .header-left-side {
