--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,12 +93,14 @@ button {
 .videoListing-page {
   display: flex;
   margin-top: 1rem;
+  max-width: 100%;
+  margin: 1rem auto;
+  justify-content: center;
 }
 
 /* side navbar */
 .video-listing-side-nav {
   background-color: white;
-  flex: 0.2;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -106,7 +108,7 @@ button {
 }
 
 .video-listing-side-nav div {
-  padding: 1rem 0 1rem 2rem;
+  padding: 1rem 6rem 1rem 2rem;
 }
 
 .video-listing-side-nav div:hover {
@@ -129,7 +131,7 @@ button {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .video-card {
