--- a/src/styles/videoStyles.css
+++ b/src/styles/videoStyles.css
@@ -10,12 +10,18 @@
   height: 100%;
 }
 
+.someref {
+  position: fixed;
+  left: 0;
+}
+
 .view-container img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 @media (max-width: 500px) {
